<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.tina.musicband.main.MainViewModel" />

        <variable
            name="posts"
            type="com.tina.musicband.data.Posts" />

        <import type="android.view.View">
        </import>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_272343">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:padding="6dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="28dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/username_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/username"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/user_avatar"
                    app:layout_constraintTop_toTopOf="@+id/user_avatar" />

                <TextView
                    android:id="@+id/created_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/created_time"
                    app:layout_constraintBottom_toBottomOf="@+id/user_avatar"
                    app:layout_constraintEnd_toEndOf="@+id/username_text"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/username_text"
                    app:layout_constraintTop_toBottomOf="@+id/username_text" />

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="59dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/select_view_circle"
                    app:setAvatar="@{mainViewModel.userAvatarMap[posts.userId]}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="0dp"
                    android:layout_height="201dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/created_time_text"
                    app:srcCompat="@drawable/image_placeholder" />

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/event_title_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_title_icon"
                    app:layout_constraintTop_toTopOf="@+id/event_title_icon" />

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/date"
                    app:layout_constraintBottom_toBottomOf="@+id/event_date_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_date_icon"
                    app:layout_constraintTop_toTopOf="@+id/event_date_icon"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/event_date_icon"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:tint="@color/blue_272343"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_title_icon"
                    app:srcCompat="@drawable/ic_calender" />

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/description"
                    app:layout_constraintBottom_toBottomOf="@+id/event_description_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_description_icon"
                    app:layout_constraintTop_toTopOf="@+id/event_description_icon" />

                <ImageView
                    android:id="@+id/event_description_icon"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:tint="@color/blue_272343"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_date_icon"
                    app:srcCompat="@drawable/ic_description" />

                <ImageView
                    android:id="@+id/event_title_icon"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:tint="@color/blue_272343"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_image"
                    app:srcCompat="@drawable/ic_event_title" />

                <ImageView
                    android:id="@+id/event_like_icon"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:tint="@color/blue_272343"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_description_icon"
                    app:srcCompat="@drawable/ic_like_normal" />

                <ImageView
                    android:id="@+id/event_like_clicked_icon"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:tint="@color/blue_272343"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_description_icon"
                    app:srcCompat="@drawable/ic_like_clicked" />


                <TextView
                    android:id="@+id/event_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="7dp"
                    android:text="0"
                    android:visibility="visible"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/event_like_clicked_icon"
                    app:layout_constraintStart_toEndOf="@+id/event_like_clicked_icon"
                    app:layout_constraintTop_toTopOf="@+id/event_like_clicked_icon" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/event_like_icon">

                    <ImageView
                        android:id="@+id/event_comment_icon"
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="8dp"
                        android:tint="@color/blue_272343"
                        app:layout_constraintEnd_toStartOf="@+id/event_comment"
                        app:layout_constraintTop_toTopOf="@+id/comment"
                        app:srcCompat="@drawable/ic_comments" />

                    <TextView
                        android:id="@+id/event_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="@string/comment"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/comment"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/comment" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view__main__event_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/comment" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/comment_block"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view__main__event_comment">

                    <EditText
                        android:id="@+id/comment_field"
                        android:layout_width="295dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/button_style_blue_border"
                        android:ems="10"
                        android:hint="Comment..."
                        android:inputType="textPersonName"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/send_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:tint="@color/gray_DDDDDD_50"
                        app:layout_constraintBottom_toBottomOf="@+id/comment_field"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/comment_field"
                        app:layout_constraintTop_toTopOf="@+id/comment_field"
                        app:srcCompat="@drawable/ic_send" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>