...
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="316dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/search_view_round_corner"
            android:text="Enter"
            android:textColor="@color/white"
...
