...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_272343"
                tools:context=".main.MainFragment">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_main_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
...
